Fix section overflow

--- a/src/styles/components/Section.module.scss
+++ b/src/styles/components/Section.module.scss
@@ -3,6 +3,7 @@
 .section {
   position: relative;
   background-color: var(--section_background);
+  overflow-x: hidden;
 
   &--gray {
     --section_background: var(--surface_gray);
